fixed logout button spacing

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -169,7 +169,7 @@ body {
 
 .logoutButton {
   padding-right: 43px;
-  margin-top: 6px;
+  margin-top: 8px;
   font-family: 'Muli';
   color: white;
 }
